[package]
name = "genovo"
version = "0.3.0"
authors = ["Jörn Bethune <joern@localhost>"]
repository = "https://github.com/BesenbacherLab/genovo"
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = [ "mutation", "genetics", "statistical-model" ]
description = "Determine genes with significantly more mutations than expected by chance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
